--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,21 @@
 html, 
 body, 
 .app{
-  height: 100vh;
   background: #eee;
-  padding: 1em;
+}
+
+.grid{
+  margin: 0px !important;
+}
+
+
+.side-panel{
+  margin: 0px !important;
+  border-radius: 0px !important;
+}
+
+.messages-col{
+  height: 100vh;
 }
 
 .messages{
@@ -11,11 +23,45 @@ body,
   overflow-y: scroll;
 }
 
-.message-form{
-  position: fixed !important;
-  margin-left: 270px !important;
+.message-self{
+  border-left: 2px solid orange;
+  padding-left: 7px;
+}
+
+.segment{
+  border-radius: 0px !important;
+}
+
+.messages-header{
+  position: absolute !important;
+  width: 100%;
+  height: 100px;
+  top: 0px; 
   left: 0px;
-  right: 1em;
-  bottom: 1em;
   z-index: 200;
+}
+
+.messages-content{
+  position: absolute !important;
+  width: 100%;
+  height: 800px;
+  left: 0px;
+  bottom: 120px; 
+  z-index: 100;
+  overflow-y: scroll;
+}
+
+
+.messages-form{
+  position: absolute !important;
+  width: 100%;
+  height: 120px;
+  bottom: 0px; 
+  left: 0px;
+  z-index: 100;
+  
+}
+
+.metapanel-col{
+  width: 400px;
 }
